# Claire_de_Binare

./: .claude_settings.json  .claudeignore  .coverage  .coveragerc  .dockerignore  .editorconfig  .env  .env.docker.live  .env.example  .env.live_data  .env.memory.example  .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaksignore  .markdown-link-check.json  .markdownlintrc  .mcp.json  .pre-commit-config.yaml  .ruff.toml  .trivyignore  .worktree-config.md  .worktree_backup_20251231_132911.txt  2025-12-08-lies-mal-deine-me-datei-und-dann-geh-zu-wiederanla.txt  360-SYSTEMCHECK.md  3_TAGE_BLOCK_2025-11-30.md  3_TAGE_TEST_DEPLOYMENT_GUIDE.md  AGENTS.md  AGENT_ISSUE_INTEGRATION.md  AGENT_TASK_RECOMMENDATIONS.md  AKTUELLER_STAND.md  ANALYSIS_SUMMARY.md  ARCHITECTURAL_CODE_ANALYSIS_REPORT.md  AUDIT_SUMMARY.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_ROADMAP.md  AUTONOMOUS_WORK_COMPLETE_2025-12-24.md  BRANCH_REVIEW_REPORT.md  CDB_KNOWLEDGE_HUB.md  (+173 more)
.agent-tasks/: GROUP1_HYGIENE_CLEANUP.md
.agent_briefings/: change_impact_brief.md  data_flow_brief.md  determinism_brief.md  governance_brief.md
.cdb_agent_workspace/: pr-224-body.md
.circleci/: config.yml
.claude/: 2025-12-07-engineering-manager.txt  CLAUDE_CODE_INDEX.md  Wiederanlauf-Prompt.md  settings.local.json  settings.local.json.json  statusline.sh
.gemini/: config.json  settings.json
.github/: ARCHITECTURE_ISSUE_144.md  BRANCH_TRIAGE_2026-01-08.md  CODEOWNERS  ISSUE_TEMPLATE.md  LABELS.md  MILESTONES.md  PR_BODY.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml  emoji-config.yaml  milestones.json  pr-labels.yml  pr_labels.json  pull_request_template.md
.gitlab/: README.md  create_labels.sh  labels.json
.secrets/: grafana_password.txt  postgres_password.txt  redis_password.txt
.secrets.example/: GRAFANA_PASSWORD
.worktrees_backup/017-split-large-riskmanager-service-into-focused-modul/cdb_agent_sdk/: pyproject.toml
backoffice/: Deep_Research_Backoffice_Dokument.md  PROJECT_STATUS.md  PROJECT_STATUS_backup_20251120.md  SYSTEM_ENVIRONMENT.md  TODO_PAPERTEST_PREP.md  logging_config.json
backtests/: LOCAL_EXECUTION_CHECKLIST.md  README.md  date_range_example.yaml  momentum_profiles.yaml  scenarios.yaml
benchmarks/: __init__.py  pipeline_benchmark.py  run_baseline.py
cdb_utils/: secret_loader.py
core/: __init__.py  auth.py  secrets.py
docs/: CI_CD_TROUBLESHOOTING.md  CLEANUP_PLAN.md  DECISION_LOG.md  DOCKER_OPTIMIZATION_GUIDE.md  DRYRUN_STATUS.md  GITHUB_ACTIONS_DOCKER_SETUP.md  KODEX – Claire de Binaire.md  MIGRATION_EVIDENCE.md  MIGRATION_MAP.md  ONBOARDING_LINKS.md  PR_CLEANROOM_DRYRUN.md  RISK_GUARDS.md  SECRET_LOADER.md  SECURITY_HARDENING.md  SECURITY_SANITATION_PLAN.md  SECURITY_SANITATION_REPORT.md  STACK_LIFECYCLE.md
governance/: .secretsignore  CDB_AGENT_POLICY.md  CDB_CONSTITUTION.md  CDB_GOVERNANCE.md  CDB_INFRA_POLICY.md  CDB_KNOWLEDGE_HUB.md  CDB_POLICY_STACK_MINI.md  CDB_PSM_POLICY.md  CDB_REPO_INDEX.md  CDB_REPO_STRUCTURE.md  CDB_RL_SAFETY_POLICY.md  CDB_TRESOR_POLICY.md  CLAUDE.md  CODEX.md  COPILOT.md  DELIVERY_APPROVED.yaml  GEMINI.md  GEMINI_MIGRATION_PLAN_FOR_CLAUDE_REVIEW.md  NEXUS.MEMORY.md  NEXUS.MEMORY.yaml  SERVICE_CATALOG.md  SHARED.WORKING.MEMORY.md  SYSTEM.CONTEXT.md  SYSTEM_CONTEXT.md  WEEKLY_REVIEW_PROCESS.md  settings.local.json
grafana/: GRAFANA_SETUP.md
infrastructure/: README.md
issues/: P1-reject-observability.md
k8s/: AUDIT_REPORT.md  DELIVERY_SUMMARY.md  QUICKSTART.md  README.md  SECRETS_GUIDE.md  cleanup-k8s.ps1  deploy-k8s.ps1  deploy-k8s.sh
knowledge/: CURRENT_STATUS.md
reports/: EXECUTION_QUEUE.md  e2e_production_test_results.txt  e2e_tests_with_password_fix.txt  makefile_syntax_check.txt  test_full_system_results.txt  test_suite_results.txt
schemas/: README.md  alert.schema.json  market_data.schema.json  order.schema.json  order_result.schema.json  risk_decision.schema.json  signal.schema.json
scripts/: README.md  (+18 more)
(+1223 files in other folders)
