[project]
name = "claire-de-binaire"
version = "0.1.0"
description = "Autonomer Krypto-Trading-Bot mit Event-Driven Architecture"
authors = [
    {name = "Jannek Büngener", email = "jannek@example.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude patterns
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "archive",
    "backoffice/archive",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented out code)
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "PLR2004", # Magic value in comparison
    "S101",    # Use of assert
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

# Markers
markers = [
    "unit: schnelle, isolierte Unit-Tests (CI + lokal)",
    "integration: Tests mit Mock-Services (CI + lokal)",
    "e2e: End-to-End Tests mit echten Containern (NUR lokal)",
    "local_only: Explizit nur lokal ausführen (nicht in CI)",
    "slow: Tests mit >10s Laufzeit",
    "risk: Risk-Engine specific tests",
    "signal: Signal-Engine specific tests",
    "execution: Execution-Service specific tests",
]

# Coverage settings
[tool.coverage.run]
source = ["services"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
